--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,23 +4,24 @@ services:
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   backend:
-    build: ./backend
+    build: ./back
     container_name: fastapi_app
     volumes:
-      - ./backend:/code
+      - ./back:/code
     ports:
       - "8000:8000"
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir /code
     environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/mydatabase
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
 
@@ -28,14 +29,16 @@ services:
     build: ./front
     container_name: nextjs_app
     ports:
-      - "3000:3000"
+      - "3000:${FRONT_PORT}"
     volumes:
       - ./front:/app
       # Ważne: to chroni node_modules wewnątrz kontenera przed nadpisaniem przez system hosta
       - /app/node_modules
       - /app/.next
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
+      - WATCHPACK_POLLING=true
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+      - INTERNAL_API_URL=http://backend:8000
     depends_on:
       - backend
 
